// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`labeler service views > fetches labelers 1`] = `
{
  "views": [
    {
      "$type": "app.bsky.labeler.defs#labelerView",
      "cid": "cids(0)",
      "creator": {
        "associated": {
          "activitySubscription": {
            "allowSubscriptions": "followers",
          },
          "labeler": true,
        },
        "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "description": "its me!",
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": [
          {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(3)",
            "val": "self-label-a",
          },
          {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(3)",
            "val": "self-label-b",
          },
        ],
        "viewer": {
          "blockedBy": false,
          "followedBy": "record(2)",
          "following": "record(1)",
          "muted": false,
        },
      },
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [],
      "likeCount": 1,
      "uri": "record(0)",
      "viewer": {
        "like": "record(4)",
      },
    },
    {
      "$type": "app.bsky.labeler.defs#labelerView",
      "cid": "cids(3)",
      "creator": {
        "associated": {
          "activitySubscription": {
            "allowSubscriptions": "followers",
          },
          "labeler": true,
        },
        "avatar": "https://bsky.public.url/img/avatar/plain/user(3)/cids(1)",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "description": "hi im bob label_me",
        "did": "user(2)",
        "displayName": "bobby",
        "handle": "bob.test",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": [],
        "viewer": {
          "blockedBy": false,
          "muted": false,
        },
      },
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [],
      "likeCount": 0,
      "uri": "record(5)",
      "viewer": {},
    },
  ],
}
`;

exports[`labeler service views > fetches labelers detailed 1`] = `
{
  "views": [
    {
      "$type": "app.bsky.labeler.defs#labelerViewDetailed",
      "cid": "cids(0)",
      "creator": {
        "associated": {
          "activitySubscription": {
            "allowSubscriptions": "followers",
          },
          "labeler": true,
        },
        "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "description": "its me!",
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": [
          {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(3)",
            "val": "self-label-a",
          },
          {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(3)",
            "val": "self-label-b",
          },
        ],
        "viewer": {
          "blockedBy": false,
          "followedBy": "record(2)",
          "following": "record(1)",
          "muted": false,
        },
      },
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [],
      "likeCount": 1,
      "policies": {
        "labelValues": [
          "spam",
          "!hide",
          "scam",
          "impersonation",
        ],
      },
      "uri": "record(0)",
      "viewer": {
        "like": "record(4)",
      },
    },
    {
      "$type": "app.bsky.labeler.defs#labelerViewDetailed",
      "cid": "cids(3)",
      "creator": {
        "associated": {
          "activitySubscription": {
            "allowSubscriptions": "followers",
          },
          "labeler": true,
        },
        "avatar": "https://bsky.public.url/img/avatar/plain/user(3)/cids(1)",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "description": "hi im bob label_me",
        "did": "user(2)",
        "displayName": "bobby",
        "handle": "bob.test",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": [],
        "viewer": {
          "blockedBy": false,
          "muted": false,
        },
      },
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [],
      "likeCount": 0,
      "policies": {
        "labelValues": [
          "nudity",
          "sexual",
          "porn",
        ],
      },
      "uri": "record(5)",
      "viewer": {},
    },
  ],
}
`;

exports[`labeler service views > returns additional labeler data 1`] = `
{
  "views": [
    {
      "$type": "app.bsky.labeler.defs#labelerViewDetailed",
      "cid": "cids(0)",
      "creator": {
        "associated": {
          "activitySubscription": {
            "allowSubscriptions": "followers",
          },
          "labeler": true,
        },
        "did": "user(0)",
        "handle": "carol.test",
        "labels": [],
        "viewer": {
          "blockedBy": false,
          "following": "record(1)",
          "muted": false,
        },
      },
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [],
      "likeCount": 0,
      "policies": {
        "labelValues": [
          "spam",
          "!hide",
          "scam",
          "impersonation",
        ],
      },
      "reasonTypes": [
        "com.atproto.moderation.defs#reasonOther",
      ],
      "subjectCollections": [
        "app.bsky.feed.post",
      ],
      "subjectTypes": [
        "record",
      ],
      "uri": "record(0)",
      "viewer": {},
    },
  ],
}
`;
